# python-self-signed-cert

./: .gitignore  README.md  cert_config  createcerts.sh  pyproject.toml  run_test.sh  test_script.py
